--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Electronic dollar | Edollar | EDC | Seure Private Crypto Currency">
-    <meta name="author" content="Electronic dollar | Edollar | EDC">
+    <meta name="description" content="Electronic dollar | Edollar | EDL | Seure Private Crypto Currency">
+    <meta name="author" content="Electronic dollar | Edollar | EDL">
 
-    <title>Electronic Dollar Secure Private Crypto Currency EDC Coin</title>
+    <title>Electronic Dollar Secure Private Crypto Currency EDL Coin</title>
     <link rel="icon" type="image/png" href="https://edollar.cash/favicon.png">
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -134,7 +134,7 @@
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-times text-primary sr-icons"></i>
-              <h3>Untraceble</h3>
+              <h3>Untraceable</h3>
               <p class="text-muted align-jstify">By taking advantage of ring signatures, a special property of a certain type of cryptography, Edollar is able to ensure that transactions are not only untraceable, but have an optional measure of ambiguity that ensures that transactions cannot easily be tied back to an individual user or computer.</p>
             </div>
           </div>
