--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="header-content-inner">
           <h1 id="homeHeading">The digital currency of the future For Every Human</h1>
           <hr>
-          <p>Electronic Dollar (or Edollar) is a private, secure, untraceable, decentralised digital currency. You are your bank, you control your funds, and nobody can trace your transfers unless you allow them to do so.</p>
+          <p style="font-weight: bold;color: white;">Electronic Dollar (or Edollar) is a private, secure, untraceable, decentralised digital currency. You are your bank, you control your funds, and nobody can trace your transfers unless you allow them to do so.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#features">Find Out More</a>
         </div>
       </div>
