--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
           <div class="col-lg-3 mr-auto text-center">
             <i class="fa fa-question-circle-o fa-3x"></i>
             <p>
-              <a target="_blank" href="https://edollar.cash/faq.html">FAQ</a>
+		<a target="_blank" href="rpc_guide.html">RPC Guide</a>
             </p>
           </div>
           <div class="col-lg-3 ml-auto text-center">
