--- a/wallet_generator.html
+++ b/wallet_generator.html
@@ -94,7 +94,7 @@
 -->
 
 <head>
-  <title>Monero offline wallet generator</title>
+  <title>Edollar offline wallet generator</title>
   <meta charset="UTF-8">
     <style type="text/css">
         html {
