--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
             </p>
           </div>
           <div class="col-lg-3 ml-auto text-center">
-            <i class="fa fa-slack fa-3x"></i>
+            <i class="fa fa-send fa-3x"></i>
             <p>
-              <a target="_blank" href="https://join.slack.com/t/edollar/shared_invite/enQtMjkzNTY4NjYxNDI5LWQzYTNlMTA4NTIxMjgwNmM2YjFkMTVhYzY2ZjZlMDdlYWZkOWQyNTE2MjhlNTk1NDU1Yjk4YWE5NmEyYmUxMjc">edollar.slack.com</a>
+              <a target="_blank" href="https://t.me/joinchat/Fivc5kBsSOHzlxSPG8I9dA">Telegram</a>
             </p>
           </div>
           <div class="col-lg-3 mr-auto text-center">
