fixed typo error

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Electronic dollar | Edollar | EDC | Seure Private Crypto Currency">
-    <meta name="author" content="Electronic dollar | Edollar | EDC">
+    <meta name="description" content="Electronic dollar | eDollar | EDL | Seure Private Crypto Currency">
+    <meta name="author" content="Electronic dollar | eDollar | EDL">
 
     <title>Electronic Dollar Secure Private Crypto Currency EDC Coin</title>
     <link rel="icon" type="image/png" href="https://edollar.cash/favicon.png">
@@ -93,7 +93,7 @@
         <div class="header-content-inner">
           <h1 id="homeHeading">The digital currency of the future For Every Human</h1>
           <hr>
-          <p>Electronic Dollar (or Edollar) is a private, secure, untraceable, decentralised digital currency. You are your bank, you control your funds, and nobody can trace your transfers unless you allow them to do so.</p>
+          <p>Electronic Dollar (or eDollar) is a private, secure, untraceable, decentralized digital currency. You are your bank, you control your funds, and nobody can trace your transfers unless you allow them to do so.</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#features">Find Out More</a>
         </div>
       </div>
@@ -114,7 +114,7 @@
             <div class="service-box">
               <i class="fa fa-4x fa-globe text-primary sr-icons"></i>
               <h3>Decentralized</h3>
-              <p class="text-muted align-jstify">Edollar is decentralized, trustless cryptocurrency. The whole system is operated by peer-to-peer network, Transactions are confirmed by distributed consensus, and then recorded on the blockchain immutably </p>
+              <p class="text-muted align-jstify">eDollar is decentralized, trustless cryptocurrency. The whole system is operated by peer-to-peer network, Transactions are confirmed by distributed consensus, and then recorded on the blockchain immutably </p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -128,7 +128,8 @@
             <div class="service-box">
               <i class="fa fa-4x fa-eye-slash text-primary sr-icons"></i>
               <h3>Private</h3>
-              <p class="text-muted align-jstify">All transactions in Edollar are Ring Confidential Transactions (RingCT) with minimum ringsize (mixin) of 4. Amount in transaction is hidden, No one can know where that money comes from and impossible to analyse block</p>
+              <p class="text-muted align-jstify">All transactions in eDollar are Ring Confidential Transactions (RingCT) with minimum ring size of 4. The amount of any transaction is always
+                hidden to the public, and because blocks cannot be analyzed, without the keys no one can ever know where that money comes from</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
@@ -180,9 +181,9 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto text-center">
-            <h2 class="section-heading">More about Edollar</h2>
+            <h2 class="section-heading">More about eDollar</h2>
             <hr class="primary">
-            <p>You can find more information about Edollar project via the following channels</p>
+            <p>You can find more information about eDollar project via the following channels</p>
           </div>
         </div>
         <div class="row">
@@ -246,7 +247,7 @@
           </div>
     </div>
   </div>
-  <div class="copy-right">copyright © 2017 Edollar project</div>
+  <div class="copy-right">copyright © 2017 eDollar project</div>
   
 </div>
     <!-- Bootstrap core JavaScript -->
