--- a/index.html
+++ b/index.html
@@ -146,7 +146,26 @@
     <section class="p-0" id="download">
       <div class="call-to-action bg-dark">
         <div class="container text-center">
-          <h2>Download Binaries</h2>
+          <h2>Download GUI Wallet</h2>
+          <p>Current version 0.1.0 - The Mercury</p>
+          <div class="row">
+            <div class="col-lg-4 ml-auto text-center">
+              <p class="small-margin"><span class="fa fa-windows small-margin"></span> For Windows</p>
+            </div>
+            <div class="col-lg-4 ml-auto text-center">
+              <a class="" href="https://edollar.cash/download/[Beta-3]eDollar_GUI Wallet_Setup-64bit.exe">Windows 64 bits</a>
+            </div>
+            <div class="col-lg-4 ml-auto text-center">
+              <a class="" href="https://edollar.cash/download/[Beta-3]eDollar_GUIWallet_Setup-32bit.exe">Windows 32 bits</a>
+            </div>
+          </div>
+          <div class="row">
+              <div class="col-lg-12 ml-auto text-center">
+                <p class="small-margin"><span class="fa fa-linux small-margin"></span> <span class="fa fa-apple"></span> Other platforms: <i>coming soon</i></p>
+              </div>
+          </div>
+          <br><br>
+          <h2>Download Binaries/CLI</h2>
           <p>Current version 0.1.0 - The Mercury</p>
           <div class="row">
             <div class="col-lg-4 ml-auto text-center">
