fixed small bug

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               <p class="small-margin"><span class="fa fa-windows small-margin"></span> For Windows</p>
             </div>
             <div class="col-lg-4 ml-auto text-center">
-              <a class="" href="https://edollar.cash/download/[Beta-3]eDollar_GUI Wallet_Setup-64bit.exe">Windows 64 bits</a>
+              <a class="" href="https://edollar.cash/download/[Beta-3]eDollar_GUIWallet_Setup-64bit.exe">Windows 64 bits</a>
             </div>
             <div class="col-lg-4 ml-auto text-center">
               <a class="" href="https://edollar.cash/download/[Beta-3]eDollar_GUIWallet_Setup-32bit.exe">Windows 32 bits</a>
