fixed small typos

--- a/index.html
+++ b/index.html
@@ -114,29 +114,28 @@
             <div class="service-box">
               <i class="fa fa-4x fa-globe text-primary sr-icons"></i>
               <h3>Decentralized</h3>
-              <p class="text-muted align-jstify">eDollar is decentralized, trustless cryptocurrency. The whole system is operated by peer-to-peer network, Transactions are confirmed by distributed consensus, and then recorded on the blockchain immutably </p>
+              <p class="text-muted align-jstify">eDollar is decentralized, trustless cryptocurrency. The whole system is operated by peer-to-peer network. Transactions are confirmed by distributed consensus, and then recorded on the blockchain immutably.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-lock text-primary sr-icons"></i>
               <h3>Secure</h3>
-              <p class="text-muted align-jstify">Using the power of a distributed peer-to-peer consensus network, every transaction on the network is cryptographically secured. Wallet files are encrypted with a passphrase to ensure they are useless if stolen</p>
+              <p class="text-muted align-jstify">Using the power of a distributed peer-to-peer consensus network, every transaction on the network is cryptographically secured. Wallet files are encrypted with a passphrase to ensure they are useless if stolen.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-eye-slash text-primary sr-icons"></i>
               <h3>Private</h3>
-              <p class="text-muted align-jstify">All transactions in eDollar are Ring Confidential Transactions (RingCT) with minimum ring size of 4. The amount of any transaction is always
-                hidden to the public, and because blocks cannot be analyzed, without the keys no one can ever know where that money comes from</p>
+              <p class="text-muted align-jstify">All transactions in eDollar are Ring Confidential Transactions (RingCT) with minimum ring size of 4. The amount of any transaction is always hidden to the public, and because blocks cannot be analyzed, without the keys no one can ever know where that money comes from.</p>
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box">
               <i class="fa fa-4x fa-times text-primary sr-icons"></i>
               <h3>Untraceble</h3>
-              <p class="text-muted align-jstify">By taking advantage of ring signatures, a special property of a certain type of cryptography, Edollar is able to ensure that transactions are not only untraceable, but have an optional measure of ambiguity that ensures that transactions cannot easily be tied back to an individual user or computer.</p>
+              <p class="text-muted align-jstify">By taking advantage of ring signatures, a special property of a certain type of cryptography, eDollar is able to ensure that transactions are not only untraceable, but have an optional measure of ambiguity that ensures that transactions cannot easily be tied back to an individual user or computer.</p>
             </div>
           </div>
         </div>
@@ -266,7 +265,7 @@
           </div>
     </div>
   </div>
-  <div class="copy-right">copyright © 2017 eDollar project</div>
+  <div class="copy-right">copyright © 2017-2018 eDollar project</div>
   
 </div>
     <!-- Bootstrap core JavaScript -->
